<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/detailradiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_order"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/law" />

        <RadioButton
            android:id="@+id/rb_evaluation"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask" />

        <RadioButton
            android:id="@+id/rb_merchant"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/flowdetailviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detailradiogroup"></android.support.v4.view.ViewPager>
</LinearLayout>
