<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/detailradiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_method"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/method" />

        <RadioButton
            android:id="@+id/rb_measure"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure" />

        <RadioButton
            android:id="@+id/rb_gist"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gist" />
    </RadioGroup>

    <com.autobotstech.cyzk.activity.widget.NoSlidingViewPaper
        android:id="@+id/flowdetailviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detailradiogroup"></com.autobotstech.cyzk.activity.widget.NoSlidingViewPaper>
</LinearLayout>
