<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/inforadiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_specialtopiclist"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/specialtopiclist" />

        <RadioButton
            android:id="@+id/rb_qalist"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qalist" />

        <RadioButton
            android:id="@+id/rb_downloadlist"
            style="@style/style_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadlist" />


    </RadioGroup>

    <com.autobotstech.cyzk.activity.widget.NoSlidingViewPaper
        android:id="@+id/infoviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/inforadiogroup"></com.autobotstech.cyzk.activity.widget.NoSlidingViewPaper>
</LinearLayout>
