<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.autobotstech.cyzk.activity.LoginActivity">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginformback"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/user_128" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_login_border"
                android:hint="@string/prompt_mobile"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:adjustViewBounds="true"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/secure_128" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_login_border"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/mobile_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/loginborderwhite"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/titleblue"
            android:textColorLink="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>
